--- a/portfolio.html
+++ b/portfolio.html
@@ -127,24 +127,24 @@
         <div class="container">
           <h1 class="visualy-hidden">Наши проекты</h1>
           <ul class="filter-menu">
-            <li class="filter-menu__item">
+            <li data-f="all" class="filter-menu__item">
               <button class="filter-menu__btn" type="button">Все</button>
             </li>
-            <li class="filter-menu__item">
+            <li data-f="website" class="filter-menu__item">
               <button class="filter-menu__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="filter-menu__item">
+            <li data-f="application" class="filter-menu__item">
               <button class="filter-menu__btn" type="button">Приложения</button>
             </li>
-            <li class="filter-menu__item">
+            <li data-f="disain" class="filter-menu__item">
               <button class="filter-menu__btn" type="button">Дизайн</button>
             </li>
-            <li class="filter-menu__item">
+            <li data-f="marketing" class="filter-menu__item">
               <button class="filter-menu__btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="projects">
-            <li class="projects__item">
+            <li class="projects__item website">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -205,7 +205,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item disain">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -268,7 +268,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item application">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -329,7 +329,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item marketing">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -390,7 +390,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item application">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -451,7 +451,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item website">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -514,7 +514,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item disain">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -577,7 +577,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item marketing">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -638,7 +638,7 @@
                 </div></a
               >
             </li>
-            <li class="projects__item">
+            <li class="projects__item application">
               <a class="projects__link" href="/"
                 ><div class="projects__thumb">
                   <picture>
@@ -802,6 +802,7 @@
       </div>
     </footer>
     <!-- script-js -->
+    <script src="./js/filter.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
