--- a/portfolio.html
+++ b/portfolio.html
@@ -127,20 +127,22 @@
         <div class="container">
           <h1 class="visualy-hidden">Наши проекты</h1>
           <ul class="filter-menu">
-            <li data-f="all" class="filter-menu__item">
-              <button class="filter-menu__btn" type="button">Все</button>
+            <li class="filter-menu__item">
+              <button data-f="all" class="filter-menu__btn" type="button">Все</button>
             </li>
-            <li data-f="website" class="filter-menu__item">
-              <button class="filter-menu__btn" type="button">Веб-сайты</button>
+            <li class="filter-menu__item">
+              <button data-f="website" class="filter-menu__btn" type="button">Веб-сайты</button>
             </li>
-            <li data-f="application" class="filter-menu__item">
-              <button class="filter-menu__btn" type="button">Приложения</button>
+            <li class="filter-menu__item">
+              <button data-f="application" class="filter-menu__btn" type="button">
+                Приложения
+              </button>
             </li>
-            <li data-f="disain" class="filter-menu__item">
-              <button class="filter-menu__btn" type="button">Дизайн</button>
+            <li class="filter-menu__item">
+              <button data-f="disain" class="filter-menu__btn" type="button">Дизайн</button>
             </li>
-            <li data-f="marketing" class="filter-menu__item">
-              <button class="filter-menu__btn" type="button">Маркетинг</button>
+            <li class="filter-menu__item">
+              <button data-f="marketing" class="filter-menu__btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="projects">
